// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Header matches the snapshot 1`] = `
<Router
  history={
    Object {
      "action": "POP",
      "block": [Function],
      "createHref": [Function],
      "go": [Function],
      "goBack": [Function],
      "goForward": [Function],
      "length": 1,
      "listen": [Function],
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "push": [Function],
      "replace": [Function],
    }
  }
>
  <Header />
</Router>
`;

exports[`Nav matches the snapshot 1`] = `
.c0 {
  background-color: white;
  color: #404040;
  font-family: 'Quicksand',sans-serif;
  font-size: 0.9em;
  position: fixed;
  border-bottom: solid 1px #d9d9d9;
  padding: 0.8rem;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
  width: 100%;
  z-index: 50;
}

.c0 a {
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0 img,
.c0 h1 {
  display: inline;
  -webkit-transition: all 0.3s;
  transition: all 0.3s;
}

.c0 img {
  height: 50px;
}

.c0 h1 {
  font-family: 'Poiret One',cursive;
  font-size: 2.5rem;
  -webkit-letter-spacing: 4px;
  -moz-letter-spacing: 4px;
  -ms-letter-spacing: 4px;
  letter-spacing: 4px;
  margin-left: 0.5rem;
  position: relative;
  top: -0.7rem;
  color: #404040;
}

.c0.small {
  padding: 0.4rem;
  padding-left: 0.8rem;
  padding-bottom: 0.15rem;
}

.c0.small img {
  height: 25px;
}

.c0.small h1 {
  font-size: 1.5rem;
  top: -0.3rem;
}

.c0.small .tagline {
  display: none;
}

@media (max-width:475px) {
  .c0 h1 {
    top: -0.3rem;
    font-size: 1.25rem;
  }

  .c0 img {
    height: 25px;
  }
}

@media (max-width:350px) {
  .c0 h1 {
    top: 0rem;
    font-size: 1.15rem;
  }

  .c0 img {
    position: relative;
    height: 20px;
    top: 0.25rem;
  }
}

<div
  className="c0"
/>
`;

exports[`StyledNavLink matches the snapshot 1`] = `
<ContextProvider
  value={
    Object {
      "history": Object {
        "action": "POP",
        "block": [Function],
        "createHref": [Function],
        "go": [Function],
        "goBack": [Function],
        "goForward": [Function],
        "length": 1,
        "listen": [Function],
        "location": Object {
          "hash": "",
          "pathname": "/",
          "search": "",
          "state": undefined,
        },
        "push": [Function],
        "replace": [Function],
      },
      "location": Object {
        "hash": "",
        "pathname": "/",
        "search": "",
        "state": undefined,
      },
      "match": Object {
        "isExact": true,
        "params": Object {},
        "path": "/",
        "url": "/",
      },
      "staticContext": undefined,
    }
  }
>
  <Header__StyledNavLink />
</ContextProvider>
`;

exports[`Tagline matches the snapshot 1`] = `
.c0 {
  color: #848484;
  position: absolute;
  display: inline-block;
  margin-left: 2rem;
  margin-top: 0.5rem;
  padding: 0.75rem 2rem;
  border-left: solid 1px #d9d9d9;
}

@media (max-width:835px) {
  .c0 {
    display: none;
  }
}

<div
  className="c0"
/>
`;
